<resources>
    <string name="app_name">Warehouse_Management</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="type_product_id">type product ID</string>
    <string name="generate_warehouse_data">Generate warehouse data</string>
    <string name="search">search</string>
    <string name="product_id_view">(product Id view)</string>
    <string name="prodcut_name">(prodcut name)</string>
    <string name="status">Status: </string>
    <string name="status_of_the_product">(status of the product)</string>
    <string name="location">Location</string>
    <string name="location_of_the_product">(product location)</string>
    <string name="amount">Amount</string>
    <string name="amount_of_the_product">(product amount)</string>
    <string name="edit">edit data</string>
    <string name="order">order product</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="_5">5</string>
    <string name="backToSearch">Search Product</string>
    <string name="logout">Log out</string>
</resources>