<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="547dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/productIdView"
            android:layout_width="283dp"
            android:layout_height="37dp"
            android:layout_marginStart="50dp"
            android:text="@string/product_id_view"
            android:textAlignment="viewStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/productView"
            android:layout_width="283dp"
            android:layout_height="43dp"
            android:layout_marginStart="50dp"
            android:text="@string/prodcut_name"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">


        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/statusLabelView"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:padding="18dip"
                android:text="@string/status"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/statusView"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/status_of_the_product"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/locationLabelView"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:padding="18dip"
                android:text="@string/location"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/locationView"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/location_of_the_product"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:id="@+id/thirdRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/amountLabelView"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:padding="18dip"
                android:text="@string/amount"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/amountView"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/amount_of_the_product"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:id="@+id/buttonRow"
            android:layout_width="fill_parent"
            android:layout_height="245dp">

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/editButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/orderButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/order" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>