<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProductDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayoutEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="547dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/productIdViewEdit"
            android:layout_width="283dp"
            android:layout_height="37dp"
            android:layout_marginStart="50dp"
            android:text="@string/product_id_view"
            android:textAlignment="viewStart"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/typeProductName"
            android:layout_width="283dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:autofillHints=""
            android:hint="@string/prodcut_name"
            android:inputType="text"
            android:text="@string/prodcut_name"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayoutEdit"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEdit"
        app:layout_constraintVertical_bias="0.0">


        <TableRow
            android:id="@+id/secondRowEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/locationLabelViewEdit"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:padding="18dip"
                android:text="@string/location"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/typeLocation"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/location_of_the_product"
                android:inputType="text"
                android:padding="18dip"
                android:text="@string/location_of_the_product"
                android:textSize="14sp"
                android:autofillHints="" />

        </TableRow>

        <TableRow
            android:id="@+id/thirdRowEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/amountLabelViewEdit"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:padding="18dip"
                android:text="@string/amount"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/typeAmount"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/amount_of_the_product"
                android:inputType="numberSigned|numberDecimal"
                android:padding="18dip"
                android:text="@string/_5"
                android:textSize="14sp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutEdit"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/cancel" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>